--- a/app/src/main/res/layout/custom_item.xml
+++ b/app/src/main/res/layout/custom_item.xml
@@ -19,7 +19,7 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="60dp"
             android:layout_marginEnd="24dp"
-            android:text=""
+            android:text="@={shoeViewModel.shoes.name}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
