--- a/app/src/main/res/layout/custom_item.xml
+++ b/app/src/main/res/layout/custom_item.xml
@@ -32,7 +32,7 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="36dp"
             android:layout_marginEnd="24dp"
-            android:text=""
+            android:text="@{shoeViewModel.shoes.company}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/shoeNameTextView" />
@@ -44,7 +44,7 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="24dp"
-            android:text=""
+            android:text="@{shoeViewModel.shoes.size}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/companyTextView" />
@@ -56,7 +56,7 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="24dp"
-            android:text=""
+            android:text="@{shoeViewModel.shoes.description}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.842"
             app:layout_constraintStart_toStartOf="parent"
