--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="red">#FA0505</color>
     <color name="green">#FF018786</color>
     <color name="gray">#C5C5C5</color>
+    <color name="light_purple">#9575CD</color>
 </resources>
