--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:layout_marginBottom="10dp"
-            android:src="@drawable/shop" />
+            android:src="@drawable/im_shop" />
 
         <EditText
             android:id="@+id/emailEditText"
@@ -50,7 +50,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:text="@string/singup"
+            android:text="@string/sing_up"
             />
 
     </LinearLayout>
