--- a/app/src/main/res/layout/fragment_shoe_detail.xml
+++ b/app/src/main/res/layout/fragment_shoe_detail.xml
@@ -44,7 +44,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Shoe Size" />
+            android:text="@string/shoe_size" />
 
         <EditText
             android:id="@+id/shoeSizeEditText"
@@ -58,7 +58,7 @@
             android:id="@+id/descriptionTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Descripition" />
+            android:text="@string/description" />
 
         <EditText
             android:id="@+id/descriptionEditText"
