--- a/app/src/main/res/layout/custom_item.xml
+++ b/app/src/main/res/layout/custom_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
@@ -19,6 +20,9 @@
             android:layout_marginTop="60dp"
             android:layout_marginEnd="24dp"
             android:text="@={shoeViewModel.shoes.name}"
+            android:textSize="20sp"
+            android:background="@color/light_purple"
+            android:padding="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -32,6 +36,9 @@
             android:layout_marginTop="36dp"
             android:layout_marginEnd="24dp"
             android:text="@{shoeViewModel.shoes.company}"
+            android:textSize="20sp"
+            android:background="@color/light_purple"
+            android:padding="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/shoeNameTextView" />
@@ -44,6 +51,9 @@
             android:layout_marginTop="32dp"
             android:layout_marginEnd="24dp"
             android:text="@{shoeViewModel.shoes.size}"
+            android:textSize="20sp"
+            android:background="@color/light_purple"
+            android:padding="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/companyTextView" />
@@ -56,10 +66,22 @@
             android:layout_marginTop="32dp"
             android:layout_marginEnd="24dp"
             android:text="@{shoeViewModel.shoes.description}"
+            android:textSize="20sp"
+            android:background="@color/light_purple"
+            android:padding="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.842"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/shoeSizeTextView" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/gray"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/shoeDescriptionTextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
